--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 __pycache__/app.cpython-37.pyc
 __pycache__/getResults.cpython-37.pyc
 .idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/jntuh-marks-analytics.iml
