--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,16 @@
-astroid==2.2.5
-atomicwrites==1.3.0
-attrs==19.1.0
 beautifulsoup4==4.8.2
-blinker==1.4
-certifi==2019.9.11
+certifi==2019.11.28
 chardet==3.0.4
-Click==7.0
-colorama==0.4.1
-cs50==4.0.2
-Flask==1.1.1
-Flask-Mail==0.9.1
-Flask-MySQL==1.4.0
+click==6.7
+Flask==1.0.2
 Flask-MySQLdb==0.2.0
-flask-mysqlpool==1.0.4
-Flask-Passlib==0.1
-Flask-SendGrid==0.7.1
-Flask-Session==0.3.1
-Flask-Uploads==0.2.1
-Flask-WTF==0.14.2
-fpdf==1.7.2
-gunicorn==19.9.0
-idna==2.8
-importlib-metadata==0.20
-instamojo-wrapper==1.2.0
-isort==4.3.21
-itsdangerous==1.1.0
-Jinja2==2.10.1
-lazy-object-proxy==1.4.2
-MarkupSafe==1.1.1
-mccabe==0.6.1
-more-itertools==7.2.0
-MouseInfo==0.1.2
-mysql-connector-python==8.0.17
-mysqlclient==1.4.4
-oauthlib==3.1.0
-packaging==19.1
-passlib==1.6.1
-Pillow==7.0.0
-pipenv==2018.11.26
-pluggy==0.12.0
-protobuf==3.9.2
-py==1.8.0
-PyAutoGUI==0.9.48
-PyGetWindow==0.0.8
-PyJWT==1.7.1
-pylint==2.3.1
-PyMouse==1.0
-PyMsgBox==1.0.7
-PyMySQL==0.9.3
-pyotp==2.3.0
-pyparsing==2.4.2
-PyPDF2==1.26.0
-pyperclip==1.7.0
-PyRect==0.1.4
-PyScreeze==0.1.26
-PySocks==1.7.1
-pytest==5.1.2
-python-http-client==3.2.1
-PyTweening==1.0.3
-pytz==2019.3
-requests==2.22.0
-requests-oauthlib==1.2.0
-selenium==3.141.0
-sendgrid==6.1.0
-six==1.12.0
+idna==2.9
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+mysqlclient==1.4.6
+pyodbc==4.0.30
+requests==2.23.0
 soupsieve==1.9.5
-SQLAlchemy==1.3.8
-sqlparse==0.3.0
-stripe==2.38.0
-termcolor==1.1.0
-tweepy==3.8.0
-twilio==6.32.0
-typed-ast==1.4.0
-urllib3==1.25.6
-virtualenv==16.7.5
-virtualenv-clone==0.5.3
-wcwidth==0.1.7
-Werkzeug==0.16.0
-wrapt==1.11.2
-WTForms==2.2.1
-zipp==0.6.0
+urllib3==1.25.8
+Werkzeug==0.14.1
