--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@ click==6.7
 Flask==1.0.2
 idna==2.9
 itsdangerous==0.24
-Jinja2==2.11.3
-MarkupSafe==1.1
+Jinja2>=2.11.3
+MarkupSafe==1.0
 redis==3.4.1
 requests==2.23.0
 soupsieve==1.9.5
-urllib3==1.25.8
-Werkzeug==0.15.3
+urllib3==1.26.5
+werkzeug>=0.15.3
 gunicorn==20.0.4
