updated DB credentials

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ __pycache__/getResults.cpython-37.pyc
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/inspectionProfiles/Project_Default.xml
 .idea/jntuh-marks-analytics.iml
+venv
