--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.1
 redis==3.4.1
-requests==2.23.0
+requests
 soupsieve==1.9.5
-urllib3==1.26.5
+urllib3
 Werkzeug==0.14.1
 gunicorn==20.0.4
