--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-beautifulsoup4==4.8.2
-certifi==2019.11.28
-chardet==3.0.4
-click==6.7
-Flask==1.0.2
-idna==2.9
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.1
-redis==3.4.1
+beautifulsoup4
+certifi
+chardet
+click
+Flas
+idna
+itsdangerous
+Jinja2
+MarkupSafe
+redis
 requests
-soupsieve==1.9.5
+soupsiev
 urllib3
-Werkzeug==0.14.1
+Werkzeug
 gunicorn==20.0.4
