--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-beautifulsoup4
-certifi
-chardet
-click
-Flas
-idna
-itsdangerous
-Jinja2
-MarkupSafe
-redis
+beautifulsoup4==4.8.2
+certifi==2019.11.28
+chardet==3.0.4
+click==6.7
+Flask==1.0.2
+idna==2.9
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.1
+redis==3.4.1
 requests
-soupsiev
+soupsieve==1.9.5
 urllib3
-Werkzeug
+Werkzeug==0.14.1
 gunicorn==20.0.4
